Actualizaciones de metodos
