# src/routers/GestionUsuarioRoutes.js
@@ -1,16 +1,15 @@
 import express from 'express';
-import { crearUsuarios, eliminarUsuario } from '../controllers/ControladorGestionUsuario.js';
+import { crearOEditarUsuario, eliminarUsuario } from '../controllers/ControladorGestionUsuario.js';
 import { verificarToken } from '../middlewares/VerificarToken.js';
 import { verificarAdministrador } from '../middlewares/VerificarRol.js';
-
-
 
 const router = express.Router();
 
 router.use(verificarToken, verificarAdministrador);
 
+router.post('/crear-o-editar', crearOEditarUsuario);
 
-router.post('/crear', verificarToken, crearUsuarios);
-router.delete('/eliminar/:id', eliminarUsuario);
+router.delete('/eliminar', eliminarUsuario);
 
 export default router;
+
